--- a/files/Süleyman Turancan Burucu IE360 HW3 rmd.Rmd
+++ b/files/Süleyman Turancan Burucu IE360 HW3 rmd.Rmd
@@ -516,7 +516,7 @@ diff_usd_plot2
 #konutvedigerfiyatindeksi_plot2
 ```
 <p></p>
->These are the plots of Weighted Average Interest Rates For Housing Loans Taken From Banks. When the Ljung-Box test p-value is examined, the correlation is unfortunately not be removed (1.154e-05 is gotten at best). Therefore, in forecasting period, we are going to use the USD/TRY Exchange Rate's squared values to predict.
+>These are the plots of Weighted Average Interest Rates For Housing Loans Taken From Banks. When the Ljung-Box test p-value is examined, the correlation is unfortunately not be removed (1.154e-05 is gotten at best). Therefore, in forecasting period, we are going to use the Weighted Average Interest Rates For Housing Loans Taken From Banks' squared values to predict.
 
 ```{r, include = TRUE, echo = FALSE, warning= FALSE, error = FALSE, message = FALSE, results = "hide"}
 library(ggplot2)
@@ -3215,16 +3215,16 @@ mydata[year < "2018", greater2014 := 0]
 mydata[year >= "2018", greater2014 := 1]
 
 #adding a 2 more predictor about quantile 0.05 and quantile 0.95
-mydata[konutilkelsatis <= quantile(konutilkelsatis,0.05), quant5:=0]
-mydata[konutilkelsatis > quantile(konutilkelsatis,0.05), quant5:=1]
-mydata[konutilkelsatis <= quantile(konutilkelsatis,0.95), quant95:=0]
-mydata[konutilkelsatis > quantile(konutilkelsatis,0.95), quant95:=1]
+mydata[konutilkelsatis <= quantile(konutilkelsatis,0.05), quant5:=1]
+mydata[konutilkelsatis > quantile(konutilkelsatis,0.05), quant5:=0]
+mydata[konutilkelsatis < quantile(konutilkelsatis,0.95), quant95:=0]
+mydata[konutilkelsatis >= quantile(konutilkelsatis,0.95), quant95:=1]
 
 #adding a 2 more predictor about quantile 0.25 and quantile 0.75
-mydata[konutilkelsatis <= quantile(konutilkelsatis,0.25), quant25:=0]
-mydata[konutilkelsatis > quantile(konutilkelsatis,0.25), quant25:=1]
-mydata[konutilkelsatis <= quantile(konutilkelsatis,0.75), quant75:=0]
-mydata[konutilkelsatis > quantile(konutilkelsatis,0.75), quant75:=1]
+mydata[konutilkelsatis <= quantile(konutilkelsatis,0.25), quant25:=1]
+mydata[konutilkelsatis > quantile(konutilkelsatis,0.25), quant25:=0]
+mydata[konutilkelsatis < quantile(konutilkelsatis,0.75), quant75:=0]
+mydata[konutilkelsatis >= quantile(konutilkelsatis,0.75), quant75:=1]
 
 #adding a predictor which is the mean of each month
 mydata[, ifmonth_any := c(rep(c(1:12),7), c(1:11))]
@@ -3241,12 +3241,13 @@ mydata[konutilkelsatis >= mean(mydata$konutilkelsatis), ifgreaterthan_mean := 1]
 ##############################################
 #forecast modeling
 fit_month = lm(konutilkelsatis~ #usd+ortfaiz+kulcealtingr+rkge+ kredihacmi+konutvedigerfiyatindeksi+
-               ortfaiz_square+diffkulcealtingr+mydata$trend+
-               mydata$mean_month+mydata$diff_konutilkelsatis+
-               as.factor(mydata$quant5)+as.factor(mydata$quant95)+
-               as.factor(mydata$ifgreaterthan_mean)+as.factor(mydata$quant25)+
-               as.factor(mydata$quant75)+as.factor(mydata$ifmonth_jan)+
-               as.factor(mydata$ifmonth_jan)+as.factor(mydata$ifmonth_feb), mydata)
+               ortfaiz_square+diffkulcealtingr+trend+
+               mean_month+diff_konutilkelsatis+
+               quant5+quant95+
+               ifgreaterthan_mean+
+               quant25+quant75+
+               ifmonth_jan+ifmonth_feb, mydata)
+summary(fit_month)
 ##############################################
 
 ##############################################
@@ -3264,11 +3265,15 @@ summary(fit_month)
 #View(mydata)
 #mydata = rbind(mydata,data.table(date=as.Date("2020-12-01")),fill=T)
 
+#trend = c(1:96)
+#trend = as.numeric(trend)
+#mydata[, trend := as.numeric(trend)]
+
 #mydata[96, ortfaizsquare := mean(ortfaiz_square)]
 #mydata[96, diff_kulcealtingr := mean(diffkulcealtingr)]
-#mydata[96, trend := 96]
-#mydata[96, mean_month := 68857]
-#mydata[96, diff_konutilkelsatis := -29730]
+#mydata[96, trend := as.numeric(96)]
+#mydata[96, mean_month := as.numeric(68857)]
+#mydata[96, diff_konutilkelsatis := as.numeric(-29730)]
 #mydata[96, quant5 := 0]
 #mydata[96, quant95 := 0]
 #mydata[96, ifgreaterthan_mean := 1]
@@ -3279,7 +3284,9 @@ summary(fit_month)
 #mydata[96, ifmonth_feb := as.factor(0)]
 
 #mydata[96, konutilkelsatis := 36658]
-#mydata[96, konutilkelsatis := predict(fit_month, mydata[trend == 96])]
+#predict(fit_month,mydata[is.na(konutilkelsatis)==T])
+
+#mydata[is.na(trend)==T, konutilkelsatis := predict(fit_month, mydata[is.na(trend)==T])]
 #predict(fit_month,mydata[is.na(konutilkelsatis)==T])
 
 ```
@@ -3295,4 +3302,547 @@ When I excluded the unimportant ones at this model, sometimes the lm() function 
 Furthermore, when we check the residuals by Breusch-Godfrey test, the result says that the mean is so close to zero (4.459591e-15) and autocorrelation borders are not passed by residuals at any of the lags. Also, the residuals should seem to be somehow normally distributed and as like desired.Finally, the p-value of the Breusch-Godfrey test shows that the autocorrelation between residuals doesn't exist.
 <p></p>
 Also, the predicted values against the data itself is graphed and they simile to each each other. Even they seem similar to the exact values, I can't do the prediction part even I tried to solve the problem for 7 hours that have endlessly drived me mad. Yet, I didn't find the prediction but I tried to fill the 96th row of mydata like I want and 12th month required and tried to make the PC predict the HSS-1S value at 12th month in 2020 gropely. Yet, it didn't work again. Unfortunately.
+<p></p>
+## **5. After Discussing and Deciding What Should Be Done for Prediction Problem**
+>Fortunately, after questioning the problem and trying to find an answer with Mr.Baydoğan and TA  Elif Konyar, it was decided to meet with TA at 12.01.2021 and the problem drived me mad about predict() function has been solved. Also, the prediction is found according to model which has been changed by excluding one nonstationary predictor and 2 other predictors. The last model, the predicted value and the predicted value-actual value plot can be seen below:
 
+```{r, include = TRUE, echo = FALSE, warning= FALSE, error = FALSE, message = FALSE, results = "markup"}
+library(ggplot2)
+library(repr)
+library(knitr)
+library(zoo)
+library(markdown)
+library(data.table)
+library(hrbrthemes)
+library(dplyr)
+library(fpp)
+library(tidyr)
+library(viridis)
+library(GGally)
+library(lubridate)
+library(data.table)
+library(anytime)
+library(gridExtra)
+library(corrplot)
+
+rawdate <- c("2013-01","2013-02","2013-03","2013-04","2013-05","2013-06","2013-07","2013-08","2013-09","2013-10","2013-11","2013-12",
+             "2014-01","2014-02","2014-03","2014-04","2014-05","2014-06","2014-07","2014-08","2014-09","2014-10","2014-11","2014-12",
+             "2015-01","2015-02","2015-03","2015-04","2015-05","2015-06","2015-07","2015-08","2015-09","2015-10","2015-11","2015-12",
+             "2016-01","2016-02","2016-03","2016-04","2016-05","2016-06","2016-07","2016-08","2016-09","2016-10","2016-11","2016-12",
+             "2017-01","2017-02","2017-03","2017-04","2017-05","2017-06","2017-07","2017-08","2017-09","2017-10","2017-11","2017-12",
+             "2018-01","2018-02","2018-03","2018-04","2018-05","2018-06","2018-07","2018-08","2018-09","2018-10","2018-11","2018-12",
+             "2019-01","2019-02","2019-03","2019-04","2019-05","2019-06","2019-07","2019-08","2019-09","2019-10","2019-11","2019-12",
+             "2020-01","2020-02","2020-03","2020-04","2020-05","2020-06","2020-07","2020-08","2020-09","2020-10","2020-11")
+
+konutilkelsatis <- c(39163,39521,43052,41233,46049,43345,49224,38817,46778,35363,48255,58329,
+                     40155,38074,41983,37555,41456,42620,39373,48828,53039,44499,48128,65844,
+                     37971,40662,51487,52598,49001,51202,43623,53218,43333,50564,50976,74032,	
+                     40077,47409,52374,46908,56043,49354,37829,53784,50972,61677,63467,71792,	
+                     44235,45215,56376,51988,52976,45433,53949,56498,70019,56994,59354,66661,	
+                     44363,43713,50701,47534,55502,57064,57617,49362,60219,74815,40821,69861,	
+                     31048,32648,44163,37784,37246,23265,38931,40634,51393,50181,48909,75480,	
+                     36040,37303,34089,14848,16860,58632,67937,52123,41376,36976,36658)
+
+usd <- c(1.77,1.78,1.81,1.80,1.83,1.90,1.93,1.96,2.02,1.99,2.03,2.06,
+         2.22,2.22,2.22,2.13,2.09,2.12,2.12,2.16,2.21,2.26,2.24,2.29,
+         2.33,2.46,2.59,2.65,2.65,2.71,2.70,2.85,3.01,2.93,2.88,2.92,
+         3.01,2.95,2.90,2.84,2.93,2.92,2.96,2.97,2.97,3.07,3.27,3.50,
+         3.74,3.68,3.67,3.66,3.57,3.53,3.57,3.52,3.47,3.67,3.89,3.85,
+         3.78,3.78,3.89,4.06,4.42,4.64,4.76,5.74,6.38,5.87,5.38,5.32,
+         5.38,5.27,5.45,5.75,6.06,5.82,5.68,5.63,5.72,5.79,5.74,5.85,
+         5.93,6.06,6.33,6.83,6.96,6.82,6.86,7.27,7.52,7.89,8.02)
+
+ortfaiz <- c(9.78,9.58,9.31,9.06,8.77,8.30,8.91,9.78,10.73,10.93,10.62,10.61,
+             11.30,13.03,13.51,13.52,12.94,12.29,11.46,11.06,10.91,10.75,10.91,11.01,
+             11.01,10.80,10.82,10.97,11.49,11.87,12.28,12.59,13.57,14.30,14.13,14.01,
+             14.27,14.45,14.45,14.33,13.96,13.84,13.67,12.86,12.09,12.12,11.69,11.42,
+             11.45,11.38,11.06,11.28,11.55,11.72,12.02,12.49,12.87,13.05,13.12,13.52,
+             14.14,14.68,14.79,14.83,13.88,13.10,16.86,18.99,25.18,28.95,28.63,27.82,
+             26.22,22.98,18.16,17.70,20.45,21.81,21.06,14.15,12.98,13.12,12.96,12.69,
+             11.88,11.43,11.40,11.72,11.23,9.30,9.11,11.09,14.15,15.07,15.68)
+
+kulcealtingr <- c(95.33,93.30,92.90,87.02,83.96,81.32,80.32,85.53,87.85,84.03,83.49,81.85,
+                  89.62,92.30,95.12,89.35,86.70,88.10,89.57,90.02,88.11,88.11,84.88,88.92,
+                  93.79,97.32,98.77,102.37,101.73,102.15,98.32,103.61,108.95,108.67,100.12,100.78,
+                  106.48,114.18,115.80,113.37,120.42,120.18,126.48,127.92,126.85,125.51,132.20,130.50,
+                  144.58,145.68,145.55,150.00,143.42,143.01,142.27,145.30,147.42,151.76,160.43,158.48,
+                  162.09,162.66,166.25,174.69,187.22,190.51,191.64,233.55,242.19,231.22,212.87,216.50,
+                  225.32,224.94,231.86,239.39,250.82,259.50,259.37,267.59,277.11,280.10,274.29,279.74,
+                  297.91,315.32,330.65,372.91,386.81,382.84,413.81,471.63,467.61,488.86,478.84)
+
+rkge <- c(101.90,105.90,111.90,111.50,114.30,114.20,109.00,106.80,104.70,103.90,98.70,96.70,
+          95.80,99.20,106.40,110.60,113.50,110.40,107.30,103.90,104.50,105.30,99.20,98.50,
+          101.70,103.70,103.00,109.70,111.30,105.60,104.80,102.90,98.20,97.70,102.60,100.40,
+          103.20,104.60,107.20,110.50,110.20,107.70,108.00,102.20,106.10,101.00,103.50,97.60,
+          97.10,105.90,108.90,111.20,109.20,112.40,109.50,110.70,111.60,109.50,106.30,103.30,
+          108.30,110.80,111.90,111.20,109.90,104.60,102.70,96.40,89.60,87.60,92.80,91.50,
+          93.00, 97.20,102.10,105.50,98.90,102.50,98.30,102.50,98.80,100.90,102.00,103.60,
+          104.10,106.90,99.70,66.80,76.90,92.60,100.70,106.20,105.30,108.10,103.90)
+
+
+kredihacmi <- c(717217571,732471561,751582335,765940118,806494663,836107242,859842946,876687783,901282935,902814624,921348413,955440248,
+                984689726,987725343,993340930,997542103,1003759852,1033719565,1043898016,1052826345,1093406944,1137796956,1155735773,1194725621,
+                1210366987,1241265137,1274885394,1306061983,1317820658,1347743600,1375967693,1400432554,1423915095,1410209231,1410892595,1425910874,
+                1437347116,1448894381,1449933550,1453897449,1490870255,1506929510,1517903259,1525138666,1543318451,1567079968,1628269104,1654468323,
+                1718470997,1706548811,1748365656,1776677647,1807301486,1837055961,1860360115,1872087207,1907292946,1953421330,2006860987,2004574277,
+                2017234277,2044972174,2092846426,2134888900,2220846718,2234903798,2291857143,2532302163,2430840314,2318246569,2247154666,2251646991,
+                2237478776,2278558972,2365119989,2401894835,2389456228,2385933006,2341073092,2382530701,2379180712,2406512407,2437620378,2495873380,
+                2521816695,2604845696,2720194559,2916853970,2976178101,3070154736,3184164139,3282214257,3346880569,3452292027,3426447145)
+
+konutvedigerfiyatindeksi <- c(258.91,259.55,260.14,260.56,260.46,261.19,262.35,263.24,265.05,266.00,267.16,269.55,
+                              270.87,272.11,272.73,273.39,274.37,275.02,276.55,277.42,278.79,286.99,287.58,287.95,
+                              291.19,292.52,294.63,295.84,297.19,298.09,299.08,300.13,301.88,304.33,305.97,307.28,
+                              312.53,313.65,314.16,315.33,316.53,318.01,319.08,320.59,321.92,321.16,323.94,327.01,
+                              332.97,336.91,338.37,339.09,340.46,341.51,343.02,345.46,348.08,351.34,355.72,358.47,
+                              366.86,368.78,370.39,375.15,378.73,382.64,386.86,401.77,424.11,441.70,443.79,443.54,
+                              429.81,429.84,430.98,432.57,434.32,435.43,448.94,458.10,467.95,484.55,486.29,487.44,
+                              493.27,495.65,496.96,495.39,497.06,500.54,505.21,510.03,514.76,525.13,530.64)
+##############################################
+
+
+##############################################
+#converting the character dates to date type dates and the structure of the mydata
+date <- as.Date(as.yearmon(rawdate))
+mydata <- data.table(date,usd,ortfaiz,kulcealtingr,rkge,kredihacmi,konutvedigerfiyatindeksi)
+
+##############################################
+
+
+##############################################
+#adding possible predictors to the table
+ifmonth_1 <- c(rep(c(1,0,0,0,0,0,0,0,0,0,0,0), 7),1,0,0,0,0,0,0,0,0,0,0)
+ifmonth_2 <- c(rep(c(0,1,0,0,0,0,0,0,0,0,0,0), 7),0,1,0,0,0,0,0,0,0,0,0)
+ifmonth_3 <- c(rep(c(0,0,1,0,0,0,0,0,0,0,0,0), 7),0,0,1,0,0,0,0,0,0,0,0)
+ifmonth_4 <- c(rep(c(0,0,0,1,0,0,0,0,0,0,0,0), 7),0,0,0,1,0,0,0,0,0,0,0)
+ifmonth_5 <- c(rep(c(0,0,0,0,1,0,0,0,0,0,0,0), 7),0,0,0,0,1,0,0,0,0,0,0)
+ifmonth_6 <- c(rep(c(0,0,0,0,0,1,0,0,0,0,0,0), 7),0,0,0,0,0,1,0,0,0,0,0)
+ifmonth_7 <- c(rep(c(0,0,0,0,0,0,1,0,0,0,0,0), 7),0,0,0,0,0,0,1,0,0,0,0)
+ifmonth_8 <- c(rep(c(0,0,0,0,0,0,0,1,0,0,0,0), 7),0,0,0,0,0,0,0,1,0,0,0)
+ifmonth_9 <- c(rep(c(0,0,0,0,0,0,0,0,1,0,0,0), 7),0,0,0,0,0,0,0,0,1,0,0)
+ifmonth_10 <- c(rep(c(0,0,0,0,0,0,0,0,0,1,0,0), 7),0,0,0,0,0,0,0,0,0,1,0)
+ifmonth_11 <- c(rep(c(0,0,0,0,0,0,0,0,0,0,1,0), 7),0,0,0,0,0,0,0,0,0,0,1)
+ifmonth_12 <- c(rep(c(0,0,0,0,0,0,0,0,0,0,0,1), 7),0,0,0,0,0,0,0,0,0,0,0)
+
+mydata[, ifmonth_jan := as.factor(ifmonth_1)]
+mydata[, ifmonth_feb := as.factor(ifmonth_2)]
+mydata[, ifmonth_mar := as.factor(ifmonth_3)]
+mydata[, ifmonth_apr := as.factor(ifmonth_4)]
+mydata[, ifmonth_may := as.factor(ifmonth_5)]
+mydata[, ifmonth_jun := as.factor(ifmonth_6)]
+mydata[, ifmonth_jul := as.factor(ifmonth_7)]
+mydata[, ifmonth_aug := as.factor(ifmonth_8)]
+mydata[, ifmonth_sep := as.factor(ifmonth_9)]
+mydata[, ifmonth_oct := as.factor(ifmonth_10)]
+mydata[, ifmonth_nov := as.factor(ifmonth_11)]
+mydata[, ifmonth_dec := as.factor(ifmonth_12)]
+
+ifyear_2013 <- c(rep(1, 12), rep(0, 83))
+ifyear_2014 <- c(rep(0, 12), rep(1, 12), rep(0, 71))
+ifyear_2015 <- c(rep(0, 24), rep(1, 12), rep(0, 59))
+ifyear_2016 <- c(rep(0, 36), rep(1, 12), rep(0, 47))
+ifyear_2017 <- c(rep(0, 48), rep(1, 12), rep(0, 35))
+ifyear_2018 <- c(rep(0, 60), rep(1, 12), rep(0, 23))
+ifyear_2019 <- c(rep(0, 72), rep(1, 12), rep(0, 11))
+ifyear_2020 <- c(rep(0, 84), rep(1, 11))
+
+mydata[, ifyear_13 := as.factor(ifyear_2013)]
+mydata[, ifyear_14 := as.factor(ifyear_2014)]
+mydata[, ifyear_15 := as.factor(ifyear_2015)]
+mydata[, ifyear_16 := as.factor(ifyear_2016)]
+mydata[, ifyear_17 := as.factor(ifyear_2017)]
+mydata[, ifyear_18 := as.factor(ifyear_2018)]
+mydata[, ifyear_19 := as.factor(ifyear_2019)]
+mydata[, ifyear_20 := as.factor(ifyear_2020)]
+
+rawyears <- c(rep(2013, 12), rep(2014, 12), rep(2015, 12), rep(2016, 12),
+              rep(2017, 12),rep(2018, 12),rep(2019, 12),rep(2020, 11))
+mydata[, year := rawyears]
+mydata[, trend := 1:.N]
+
+mydata[, konutilkelsatis := konutilkelsatis]
+
+rawyears2 <- c(rep(2013, 12), rep(2014, 12), rep(2015, 12), rep(2016, 12),
+               rep(2017, 12),rep(2018, 12),rep(2019, 12),rep(2020, 11))
+
+mydata[, ifyear_any := rawyears2]
+##############################################
+#rm(list=setdiff(ls(), "mydata"))
+
+##############################################
+#raw plot of the konutilkelsatis and geom_point + geom_line version
+
+
+konutilkelsatis_plot <- ggplot(data = mydata, aes(date, konutilkelsatis, color = year, size = year)) + 
+  geom_line(size = 1, alpha = 0.4) + 
+  geom_point(alpha = 1) + 
+  labs(title = "Plot of House Sales Statistics - First Sale (HSS-1S)" , 
+       x = "Date (in month)", y = "House Sales Statistics - First Sale",
+       size="Year",col="Year") +
+  theme_minimal() +
+  theme(text = element_text(family = "serif", size = 14),
+        legend.position = "bottom",
+        axis.ticks.length = unit(1, "lines"),
+        legend.margin = margin(20,20,10,15,"pt"),
+        rect = element_rect(fill = "grey92"),
+        plot.title = element_text(face = "italic"),
+        legend.box.background = element_rect(fill = "white"))
+#konutilkelsatis_plot + scale_color_gradient(low="purple", high="red")
+#############################################
+
+##############################################
+#usd plot larini ?izdirmece
+
+diffusd <- c(diff(usd), mean(diff(usd)))
+mydata[,diff_usd := diffusd]
+usd_square <- c(usd*usd)
+mydata[,usdsquare := usd_square]
+
+usd_plot1 <- ggplot(data = mydata, aes(date, usd, color = year)) + 
+  geom_line(size = 1, alpha = 0.4) + 
+  geom_point(alpha = 1) + 
+  labs(title = "USD/TRY Exchange Rate" , 
+       x = "Date (in month)", y = element_blank(), col="Year") +
+  theme_minimal() +
+  theme(text = element_text(family = "serif", size = 14),
+        legend.position = "bottom",
+        axis.ticks.length = unit(1, "lines"),
+        legend.margin = margin(20,20,10,15,"pt"),
+        rect = element_rect(fill = "grey92"),
+        plot.title = element_text(face = "italic"),
+        legend.box.background = element_rect(fill = "white"))
+usd_plot2 <- usd_plot1 + scale_color_gradient(low="orange", high="blue") + guides(fill=guide_legend(title="New Legend Title"))
+
+diff_usd_plot1 <- ggplot(data = mydata, aes(date, diffusd, color = year)) + 
+  geom_line(size = 1, alpha = 0.4) + 
+  geom_point(alpha = 1) + 
+  labs(title = "Consecutive Differences of USD/TRY Exchange Rate" , 
+       x = "Date (in month)", y = element_blank(), col="Year") +
+  theme_minimal() +
+  theme(text = element_text(family = "serif", size = 14),
+        legend.position = "bottom",
+        axis.ticks.length = unit(1, "lines"),
+        legend.margin = margin(20,20,10,15,"pt"),
+        rect = element_rect(fill = "grey92"),
+        plot.title = element_text(face = "italic"),
+        legend.box.background = element_rect(fill = "white"))
+diff_usd_plot2 <- diff_usd_plot1 + scale_color_gradient(low="orange", high="blue") + guides(fill=guide_legend(title="New Legend Title"))
+
+usd_square_plot1 <- ggplot(data = mydata, aes(date, usd_square, color = year)) + 
+  geom_line(size = 1, alpha = 0.4) + 
+  geom_point(alpha = 1) + 
+  labs(title = "USD/TRY Exchange Rate Square" , 
+       x = "Date (in month)", y = element_blank(), col="Year") +
+  theme_minimal() +
+  theme(text = element_text(family = "serif", size = 14),
+        legend.position = "bottom",
+        axis.ticks.length = unit(1, "lines"),
+        legend.margin = margin(20,20,10,15,"pt"),
+        rect = element_rect(fill = "grey92"),
+        plot.title = element_text(face = "italic"),
+        legend.box.background = element_rect(fill = "white"))
+usd_square_plot2 <- usd_square_plot1 + scale_color_gradient(low="orange", high="blue") + guides(fill=guide_legend(title="New Legend Title"))
+##############################################
+
+##############################################
+diffortfaiz <- c(diff(ortfaiz), mean(diff(ortfaiz)))
+mydata[,diff_ortfaiz := diffortfaiz]
+ortfaiz_square <- c(ortfaiz*ortfaiz)
+mydata[,ortfaizsquare := ortfaiz_square]
+
+ortfaiz_plot1 <- ggplot(data = mydata, aes(date, ortfaiz, color = year)) + 
+  geom_line(size = 1, alpha = 0.4) + 
+  geom_point(alpha = 1) + 
+  labs(title = "Weighted Average Interest Rates For Housing Loans Taken From Banks" , 
+       x = "Date (in month)", y = element_blank(), col="Year") +
+  theme_minimal() +
+  theme(text = element_text(family = "serif", size = 14),
+        legend.position = "bottom",
+        axis.ticks.length = unit(1, "lines"),
+        legend.margin = margin(20,20,10,15,"pt"),
+        rect = element_rect(fill = "grey92"),
+        plot.title = element_text(face = "italic"),
+        legend.box.background = element_rect(fill = "white"))
+ortfaiz_plot2 <- ortfaiz_plot1 + scale_color_gradient(low="orange", high="blue") + guides(fill=guide_legend(title="New Legend Title"))
+
+ortfaiz_square_plot1 <- ggplot(data = mydata, aes(date, ortfaiz_square, color = year)) + 
+  geom_line(size = 1, alpha = 0.4) + 
+  geom_point(alpha = 1) + 
+  labs(title = "Consecutive Differences of Weighted Average Interest Rates For Housing Loans Taken From Banks" , 
+       x = "Date (in month)", y = element_blank(), col="Year") +
+  theme_minimal() +
+  theme(text = element_text(family = "serif", size = 14),
+        legend.position = "bottom",
+        axis.ticks.length = unit(1, "lines"),
+        legend.margin = margin(20,20,10,15,"pt"),
+        rect = element_rect(fill = "grey92"),
+        plot.title = element_text(face = "italic"),
+        legend.box.background = element_rect(fill = "white"))
+ortfaiz_square_plot2 <- ortfaiz_square_plot1 + scale_color_gradient(low="orange", high="blue") + guides(fill=guide_legend(title="New Legend Title"))
+#Box.test(diff(ortfaiz), lag=12, type = "Ljung-Box")
+############################################
+
+##############################################
+#kulcealtingr ?izdirmece
+diffkulcealtingr <- c(diff(kulcealtingr), mean(diff(kulcealtingr)))
+mydata[,diff_kulcealtingr := diffkulcealtingr]
+kulcealtingr_square <- c(kulcealtingr*kulcealtingr)
+mydata[,kulcealtingrsquare := kulcealtingr_square]
+
+kulcealtingr_plot1 <- ggplot(data = mydata, aes(date, kulcealtingr, color = year)) + 
+  geom_line(size = 1, alpha = 0.4) + 
+  geom_point(alpha = 1) + 
+  labs(title = "Bullion Gold\nSelling Price TRY/Gram" , 
+       x = "Date (in month)", y = element_blank(), col="Year") +
+  theme_minimal() +
+  theme(text = element_text(family = "serif", size = 14),
+        legend.position = "bottom",
+        axis.ticks.length = unit(1, "lines"),
+        legend.margin = margin(20,20,10,15,"pt"),
+        rect = element_rect(fill = "grey92"),
+        plot.title = element_text(face = "italic"),
+        legend.box.background = element_rect(fill = "white"))
+kulcealtingr_plot2 <- kulcealtingr_plot1 + scale_color_gradient(low="orange", high="blue") + guides(fill=guide_legend(title="New Legend Title"))
+
+kulcealtingr_square_plot1 <- ggplot(data = mydata, aes(date, kulcealtingr_square, color = year)) + 
+  geom_line(size = 1, alpha = 0.4) + 
+  geom_point(alpha = 1) + 
+  labs(title = "Consecutive Differences of Weighted Average Interest Rates For\nHousing Loans Taken From Banks" , 
+       x = "Date (in month)", y = element_blank(), col="Year") +
+  theme_minimal() +
+  theme(text = element_text(family = "serif", size = 14),
+        legend.position = "bottom",
+        axis.ticks.length = unit(1, "lines"),
+        legend.margin = margin(20,20,10,15,"pt"),
+        rect = element_rect(fill = "grey92"),
+        plot.title = element_text(face = "italic"),
+        legend.box.background = element_rect(fill = "white"))
+kulcealtingr_square_plot2 <- kulcealtingr_square_plot1 + scale_color_gradient(low="orange", high="blue") + guides(fill=guide_legend(title="New Legend Title"))
+
+#Box.test(diffkulcealtingr, lag=12, type = "Ljung-Box")
+#############################################
+
+##############################################
+#rkge ?izdirmece
+diffrkge <- c(diff(rkge), mean(diff(rkge)))
+mydata[,diff_rkge := diffrkge]
+rkge_square <- c(rkge*rkge)
+mydata[,rkgesquare := rkge_square]
+
+rkge_plot1 <- ggplot(data = mydata, aes(date, rkge, color = year)) + 
+  geom_line(size = 1, alpha = 0.4) + 
+  geom_point(alpha = 1) + 
+  labs(title = "Real Sector Confidence Index" , 
+       x = "Date (in month)", y = element_blank(), col="Year") +
+  theme_minimal() +
+  theme(text = element_text(family = "serif", size = 14),
+        legend.position = "bottom",
+        axis.ticks.length = unit(1, "lines"),
+        legend.margin = margin(20,20,10,15,"pt"),
+        rect = element_rect(fill = "grey92"),
+        plot.title = element_text(face = "italic"),
+        legend.box.background = element_rect(fill = "white"))
+rkge_plot2 <- rkge_plot1 + scale_color_gradient(low="orange", high="blue") + guides(fill=guide_legend(title="New Legend Title"))
+
+diffrkge_plot1 <- ggplot(data = mydata, aes(date, diffrkge, color = year)) + 
+  geom_line(size = 1, alpha = 0.4) + 
+  geom_point(alpha = 1) + 
+  labs(title = "Real Sector Confidence Index" , 
+       x = "Date (in month)", y = element_blank(), col="Year") +
+  theme_minimal() +
+  theme(text = element_text(family = "serif", size = 14),
+        legend.position = "bottom",
+        axis.ticks.length = unit(1, "lines"),
+        legend.margin = margin(20,20,10,15,"pt"),
+        rect = element_rect(fill = "grey92"),
+        plot.title = element_text(face = "italic"),
+        legend.box.background = element_rect(fill = "white"))
+diffrkge_plot2 <- diffrkge_plot1 + scale_color_gradient(low="orange", high="blue") + guides(fill=guide_legend(title="New Legend Title"))
+#Box.test(diffrkge, lag=12, type = "Ljung-Box")
+##############################################
+
+##############################################
+#kredihacmi ?izdirmece
+diffkredihacmi <- c(diff(kredihacmi), mean(diff(kredihacmi)))
+mydata[,diff_kredihacmi := diffkredihacmi]
+kredihacmi_square <- c(kredihacmi*kredihacmi)
+mydata[,kredihacmisquare := kredihacmi_square]
+
+kredihacmi_plot1 <- ggplot(data = mydata, aes(date, kredihacmi, color = year)) + 
+  geom_line(size = 1, alpha = 0.4) + 
+  geom_point(alpha = 1) + 
+  labs(title = "Monthly, Domestic Loans,\nBanking Sector (in Thousand TRY)\nfor Deposit Money Banks" , 
+       x = "Date (in month)", y = element_blank(), col="Year") +
+  theme_minimal() +
+  theme(text = element_text(family = "serif", size = 14),
+        legend.position = "bottom",
+        axis.ticks.length = unit(1, "lines"),
+        legend.margin = margin(20,20,10,15,"pt"),
+        rect = element_rect(fill = "grey92"),
+        plot.title = element_text(face = "italic"),
+        legend.box.background = element_rect(fill = "white"))
+kredihacmi_plot2 <- kredihacmi_plot1 + scale_color_gradient(low="orange", high="blue") + guides(fill=guide_legend(title="New Legend Title"))
+
+diffkredihacmi_plot1 <- ggplot(data = mydata, aes(date, diffkredihacmi, color = year)) + 
+  geom_line(size = 1, alpha = 0.4) + 
+  geom_point(alpha = 1) + 
+  labs(title = "Consecutive Differences of Monthly, Domestic Loans,\nBanking Sector (in Thousand TRY)\nfor Deposit Money Banks" , 
+       x = "Date (in month)", y = element_blank(), col="Year") +
+  theme_minimal() +
+  theme(text = element_text(family = "serif", size = 14),
+        legend.position = "bottom",
+        axis.ticks.length = unit(1, "lines"),
+        legend.margin = margin(20,20,10,15,"pt"),
+        rect = element_rect(fill = "grey92"),
+        plot.title = element_text(face = "italic"),
+        legend.box.background = element_rect(fill = "white"))
+diffkredihacmi_plot2 <- diffkredihacmi_plot1 + scale_color_gradient(low="orange", high="blue") + guides(fill=guide_legend(title="New Legend Title"))
+#Box.test(diffkredihacmi, lag=12, type = "Ljung-Box")
+#############################################
+
+#############################################
+#konutvedigerfiyatendeksi ?izdirmece
+diffkonutvedigerfiyatindeksi <- c(diff(konutvedigerfiyatindeksi), mean(diff(konutvedigerfiyatindeksi)))
+mydata[,diff_konutvedigerfiyatindeksi := diffkonutvedigerfiyatindeksi]
+konutvedigerfiyatindeksi_square <- c(konutvedigerfiyatindeksi*konutvedigerfiyatindeksi)
+mydata[,konutvedigerfiyatindeksisquare := konutvedigerfiyatindeksi_square]
+
+konutvedigerfiyatindeksi_plot1 <- ggplot(data = mydata, aes(date, konutvedigerfiyatindeksi, color = year)) + 
+  geom_line(size = 1, alpha = 0.4) + 
+  geom_point(alpha = 1) + 
+  labs(title = "Housing, Water, Electricity,\nGas, and Other Fuels Price Index" , 
+       x = "Date (in month)", y = element_blank(), col="Year") +
+  theme_minimal() +
+  theme(text = element_text(family = "serif", size = 14),
+        legend.position = "bottom",
+        axis.ticks.length = unit(1, "lines"),
+        legend.margin = margin(20,20,10,15,"pt"),
+        rect = element_rect(fill = "grey92"),
+        plot.title = element_text(face = "italic"),
+        legend.box.background = element_rect(fill = "white"))
+konutvedigerfiyatindeksi_plot2 <- konutvedigerfiyatindeksi_plot1 + scale_color_gradient(low="orange", high="blue") + guides(fill=guide_legend(title="New Legend Title"))
+
+diffkonutvedigerfiyatindeksi_plot1 <- ggplot(data = mydata, aes(date, diffkonutvedigerfiyatindeksi, color = year)) + 
+  geom_line(size = 1, alpha = 0.4) + 
+  geom_point(alpha = 1) + 
+  labs(title = "Consecutive Differences of\nHousing, Water, Electricity,\nGas, and Other Fuels Price Index" , 
+       x = "Date (in month)", y = element_blank(), col="Year") +
+  theme_minimal() +
+  theme(text = element_text(family = "serif", size = 14),
+        legend.position = "bottom",
+        axis.ticks.length = unit(1, "lines"),
+        legend.margin = margin(20,20,10,15,"pt"),
+        rect = element_rect(fill = "grey92"),
+        plot.title = element_text(face = "italic"),
+        legend.box.background = element_rect(fill = "white"))
+diffkonutvedigerfiyatindeksi_plot2 <- diffkonutvedigerfiyatindeksi_plot1 + scale_color_gradient(low="orange", high="blue") + guides(fill=guide_legend(title="New Legend Title"))
+#Box.test(diffkonutvedigerfiyatindeksi, lag=12, type = "Ljung-Box")
+#############################################
+
+##############################################
+#regressors
+
+#adding a one more predictor for higher variance after 2017's end which is equal to 1 starting from 2018
+mydata[year < "2018", greater2014 := 0]
+mydata[year >= "2018", greater2014 := 1]
+
+#adding a 2 more predictor about quantile 0.05 and quantile 0.95
+mydata[konutilkelsatis <= quantile(konutilkelsatis,0.05), quant5:=1]
+mydata[konutilkelsatis > quantile(konutilkelsatis,0.05), quant5:=0]
+mydata[konutilkelsatis < quantile(konutilkelsatis,0.95), quant95:=0]
+mydata[konutilkelsatis >= quantile(konutilkelsatis,0.95), quant95:=1]
+
+#adding a 2 more predictor about quantile 0.25 and quantile 0.75
+mydata[konutilkelsatis <= quantile(konutilkelsatis,0.25), quant25:=1]
+mydata[konutilkelsatis > quantile(konutilkelsatis,0.25), quant25:=0]
+mydata[konutilkelsatis < quantile(konutilkelsatis,0.75), quant75:=0]
+mydata[konutilkelsatis >= quantile(konutilkelsatis,0.75), quant75:=1]
+
+#adding a predictor which is the mean of each month
+mydata[, ifmonth_any := c(rep(c(1:12),7), c(1:11))]
+mydata[, mean_month := mean(konutilkelsatis), by  = mydata$ifmonth_any]
+
+#adding a predictor which is the differences of each month's konutilkelsatis + 1.aylarin difference ortalamasi
+mydata[, diff_konutilkelsatis := c(diff(konutilkelsatis), -29730)]
+
+#adding a predictor which is the differences of each month's konutilkelsatis + 1.aylarin ortalamasi
+mydata[konutilkelsatis < mean(mydata$konutilkelsatis), ifgreaterthan_mean := 0]
+mydata[konutilkelsatis >= mean(mydata$konutilkelsatis), ifgreaterthan_mean := 1]
+##############################################
+
+##############################################
+mydata[, trend := as.numeric(trend)]
+mydata[, ifmonth_jan := as.numeric(ifmonth_jan)]
+mydata[, ifmonth_feb := as.numeric(ifmonth_feb)]
+
+mydata=mydata[1:95,]
+fit_month = lm(konutilkelsatis~ #usd+ortfaiz+kulcealtingr+rkge+ kredihacmi+konutvedigerfiyatindeksi+
+                 mean_month+diff_konutilkelsatis+
+                 quant5+quant95+
+                 ifgreaterthan_mean+
+                 quant25+quant75+
+                 ifmonth_jan+ifmonth_feb, mydata)
+summary(fit_month)
+##############################################
+
+##############################################
+#rm(list=setdiff(ls(),"mydata"))
+#rm(list=setdiff(ls(),"mydata"))
+#rm(list=setdiff(ls(),"mydata"))
+#rm(list=setdiff(ls(),"mydata"))
+#rm(list=setdiff(ls(),"mydata"))
+#rm(list=setdiff(ls(),"mydata"))
+#rm(list=setdiff(ls(),"mydata"))
+#rm(list=setdiff(ls(),"mydata"))
+#rm(list=setdiff(ls(),"mydata"))
+#rm(list=setdiff(ls(),"mydata"))
+#rm(list=setdiff(ls(),"mydata"))
+#rm(list=setdiff(ls(),"mydata"))
+#rm(list=setdiff(ls(),"mydata"))
+#rm(list=setdiff(ls(),"mydata"))
+#rm(list=setdiff(ls(),"mydata"))
+#rm(list=setdiff(ls(),"mydata"))
+
+mydata = rbind(mydata,data.table(date=as.Date("2020-12-01")),fill=T)
+
+mydata[96, ortfaizsquare := mean(mydata[1:95]$ortfaizsquare,na.rm=T)]
+mydata[96, diff_kulcealtingr := mean(mydata[1:95]$diff_kulcealtingr,na.rm=T)]
+mydata[96, trend := as.numeric(96)]
+mydata[96, mean_month := as.numeric(68857)]
+mydata[96, diff_konutilkelsatis := as.numeric(-29730)]
+mydata[96, quant5 := as.numeric(0)]
+mydata[96, quant95 := as.numeric(0)]
+mydata[96, ifgreaterthan_mean := as.numeric(1)]
+mydata[96, quant25 := as.numeric(0)]
+mydata[96, quant75 := as.numeric(0)]
+mydata[96, ifmonth_jan := as.numeric(0)]
+mydata[96, ifmonth_feb := as.numeric(0)]
+
+##############################################
+
+##############################################
+predict(fit_month,mydata[is.na(konutilkelsatis)==T])
+
+mydata[is.na(konutilkelsatis)==T, konutilkelsatis := predict(fit_month, mydata[is.na(konutilkelsatis)==T])]
+
+##############################################
+
+##############################################
+
+dat <- data.table(konutilkelsatis, fitted(fit_month))
+ggplot(dat, aes(x = konutilkelsatis, y = fitted(fit_month)))+
+  geom_point(alpha = 0.5)+
+  ylab("Fitted Values")+
+  xlab("Actual Valeus")+
+  ggtitle("Fitted vs. Actual Values") + geom_abline(intercept = 0, slope = 1)+
+  theme_minimal()+
+  theme(text = element_text(family = "serif", size = 14),
+        legend.position = "bottom",
+        axis.ticks.length = unit(1, "lines"),
+        legend.margin = margin(20,20,10,15,"pt"),
+        rect = element_rect(fill = "grey92"),
+        plot.title = element_text(face = "italic"),
+        legend.box.background = element_rect(fill = "white"))
+
+##############################################
+
+```
